force-app/main/default/objects/cdcpc__RD_Attributes_LookUp_Translation__c/cdcpc__RD_Attributes_LookUp_Translation__c.object-meta.xml
<CustomObject>
    <label>RD AttributesLookUpTranslation</label>
    <nameField>
        <label>RD AttributesLookUpTranslation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD AttributesLookUpTranslation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>