force-app/main/default/objects/cdcpc__RD_Attributes_LookUp_Translation__c/fields/cdcpc__Filter_Text3__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Filter_Text3__c</fullName>
    <formula>IF(
	NOT(ISBLANK(cdcpc__Text3__c)),
	&quot; AND Text3Val__c &quot; +
		IF(cdcpc__TextOpp3__c = &quot;=ORDASH&quot;, &quot; IN (&apos;-&apos;, &quot;, cdcpc__TextOpp3__c + &quot; &quot;) + &quot;{{T:&quot; + LOWER(cdcpc__Text3__c) + &quot;}}&quot; +

		IF(cdcpc__TextOpp3__c = &quot;=ORDASH&quot;, &quot;)&quot;, &quot;&quot;)



, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filter Text3</label>
    <type>Text</type>
</CustomField>