force-app/main/default/objects/cdcpc__RD_Attributes_LookUp_Translation__c/fields/cdcpc__TextOpp3__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TextOpp3__c</fullName>
    <label>TextOpp3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>