force-app/main/default/objects/cdcpc__RD_Attributes_LookUp_Translation__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Attribute__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>